Add EVENT_RELEVANCE to environment variables and output in create-event-pr.yml

--- a/.github/workflows/create-event-pr.yml
+++ b/.github/workflows/create-event-pr.yml
@@ -36,6 +36,7 @@ jobs:
           LOCATION: ${{ github.event.client_payload.location }}
           SUBMITTER_EMAIL: ${{ github.event.client_payload.submitterEmail }}
           SHEET_ROW: ${{ github.event.client_payload.googleSheetRow }}
+          EVENT_RELEVANCE: ${{ github.event.client_payload.eventRelevance }}
           # Add other env vars for any other data you pass in client_payload
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -62,6 +63,7 @@ jobs:
           printf 'startTime: "%s"\n' "$START_TIME" >> "$FILE_PATH"
           printf 'endTime: "%s"\n' "$END_TIME" >> "$FILE_PATH"
           printf 'location: "%s"\n' "$LOCATION" >> "$FILE_PATH"
+          printf 'relevance: "%s"\n' "$EVENT_RELEVANCE" >> "$FILE_PATH"
           # Add any other frontmatter fields you need
           printf 'sourceSheetRow: %s\n' "$SHEET_ROW" >> "$FILE_PATH" # For traceability
           printf -- '---\n\n' >> "$FILE_PATH"
@@ -84,6 +86,7 @@ jobs:
             Event Title: $EVENT_TITLE
             Date: $EVENT_DATE
             Location: $LOCATION
+            Relevance to Bioconductor: $EVENT_RELEVANCE
             
             Submitted by: $SUBMITTER_EMAIL (if available)
             Original Google Sheet Row: $SHEET_ROW
