Add timezone awareness to event date handling in event_manager.gs and update create-event-pr.yml to include timezone information in the event data.

--- a/.github/workflows/create-event-pr.yml
+++ b/.github/workflows/create-event-pr.yml
@@ -37,6 +37,7 @@ jobs:
           SUBMITTER_EMAIL: ${{ github.event.client_payload.submitterEmail }}
           SHEET_ROW: ${{ github.event.client_payload.googleSheetRow }}
           EVENT_RELEVANCE: ${{ github.event.client_payload.eventRelevance }}
+          EVENT_TIMEZONE: ${{ github.event.client_payload.timeZone }}
           # Add other env vars for any other data you pass in client_payload
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -64,6 +65,7 @@ jobs:
           printf 'endTime: "%s"\n' "$END_TIME" >> "$FILE_PATH"
           printf 'location: "%s"\n' "$LOCATION" >> "$FILE_PATH"
           printf 'relevance: "%s"\n' "$EVENT_RELEVANCE" >> "$FILE_PATH"
+          printf 'timeZone: "%s"\n' "$EVENT_TIMEZONE" >> "$FILE_PATH"
           # Add any other frontmatter fields you need
           printf 'sourceSheetRow: %s\n' "$SHEET_ROW" >> "$FILE_PATH" # For traceability
           printf -- '---\n\n' >> "$FILE_PATH"
@@ -87,6 +89,7 @@ jobs:
             Date: $EVENT_DATE
             Location: $LOCATION
             Relevance to Bioconductor: $EVENT_RELEVANCE
+            Timezone: $EVENT_TIMEZONE
             
             Submitted by: $SUBMITTER_EMAIL (if available)
             Original Google Sheet Row: $SHEET_ROW
